# AI-PC-Samples

./: README.md
.github/workflows/: autopep8.yml  bandit.yml  codeql.yml  scorecard.yml
AI-Documentation/: requirements.txt
AI-Travel-Agent/: requirements.txt
AI-Upscaling-With-NPU/: NPU_Upscaling_demo.py  README.md  pyproject.toml  sample_utils.py
Finetune_Image_Captioning/: README.md  pyproject.toml
Genre-driven-storytelling/: Genre-driven-storytelling.ipynb  README.md  pyproject.toml
LLM/: 09_rag_langchain.ipynb  10_rag_pytorch.ipynb
LLM/PyTorch/: pyproject.toml
LLM/rag/: requirements.txt
LLM/src/: README.md  st_ollama.py  st_rag_chat.py
Text-Summarizer-Browser-Plugin/: requirements.txt
Video-Description-Generation-Query-Retrieval/: Readme.md  Video_RAG_Ollama.ipynb  pyproject.toml  st_video_rag_demo.py  st_video_rag_demo_final.py
Video-Description-Generation-Query-Retrieval/Video_descriptions_database_ollama/: chroma.sqlite3
