[project]
name = "ai-upscaling-with-npu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "huggingface-hub>=0.28.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "safetensors>=0.5.2",
    "openvino>=2025.0.0",
    "opencv-python>=4.11.0.86",
    "nncf>=2.15.0",
    "torchinfo>=1.8.0",
    "plotly>=6.0.0",
    "ffmpeg-python>=0.2.0",
    "torch==2.13.0",
    "certifi>=2024.0.0",
    "h11==0.16.0",
    "jinja2==3.1.6",
    "jupyterlab==4.5.9",
    "notebook==7.5.6",
    "requests==2.33.0",
    "urllib3==2.7.0",
    "streamlit>=1.58.0",
    "tornado>=6.5.5",
    "mistune>=3.3.0",
    "pillow>=12.3.0",
    "nbconvert>=7.17.0",
    "setuptools>=78.1.1",
    "jupyter-server>=2.20.0",
    "idna>=3.15",
    "fonttools>=4.60.2",
    "filelock>=3.20.1",
    "pygments>=2.20.0",
    "soupsieve>=2.8.4",
]

[dependency-groups]
dev = [
    "bandit>=1.8.2",
    "nb-clean>=4.0.1",
    "nbqa>=1.9.1",
    "pyproject-runner>=0.3.0",
    "ruff>=0.9.6",
]

#<<<<<<< docs/note-uv-required

# NOTE: Install with `uv sync`. The torch, torchvision, and
# pytorch-triton-xpu wheels for Intel XPU live on the PyTorch XPU index
# (https://download.pytorch.org/whl/xpu), not on PyPI. The [tool.uv.sources]
# block below tells uv to fetch them from there. Vanilla pip does not parse
# [tool.uv.sources] / [[tool.uv.index]] and will look for the packages on
# PyPI instead, which won't work for the XPU variants.
#=======
#>>>>>>> main
[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }

[tool.ruff]
# Allow lines to be as long as 120.
line-length = 120
extend-exclude = [".venv"]

[tool.ruff.lint]
preview = true
extend-select = ["S", "ERA", "PD", "NPY", "E", "E501"]

[tool.ruff.format]
preview = true

[tool.pyproject-runner.tasks]
lint = "ruff check . --fix"
format = "ruff format ."
lint_check = "ruff check ."
format_check = "ruff format . --check"
bandit_check = "bandit -r . --exclude ./.venv"
lint_notebook = "nbqa 'ruff check  --fix' AI_Upscaling_With_NPU.ipynb"
format_notebook = "nbqa 'ruff format' AI_Upscaling_With_NPU.ipynb"
clean_notebook = "nb-clean clean --remove-empty-cells AI_Upscaling_With_NPU.ipynb"
lint_notebook_check = "nbqa 'ruff check' AI_Upscaling_With_NPU.ipynb"
format_notebook_check = "nbqa 'ruff format --check' AI_Upscaling_With_NPU.ipynb"
bandit_notebook_check = "bandit AI_Upscaling_With_NPU.ipynb"
execute = "jupyter nbconvert --execute --to notebook --inplace --debug AI_Upscaling_With_NPU.ipynb"
validate = {pre = [
        "lint_check", 
        "format_check", 
        "bandit_check",
        "lint_notebook_check", 
        "format_notebook_check", 
        "bandit_notebook_check"
        ], post = ["execute"]}
