[project]
name = "finetune-image-captioning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "pytorch-triton-xpu>=3.3.0 ; sys_platform == 'win32' or sys_platform == 'linux'",
    "datasets>=3.6.0",
    "jupyter>=1.1.1",
    "lab>=8.4",
    "transformers>=5.0.0rc3",
    "evaluate>=0.4.3",
    "bert-score>=0.3.13",
]
# NOTE: Install with `uv sync`. The torch, torchvision, and
# pytorch-triton-xpu wheels for Intel XPU live on the PyTorch XPU index
# (https://download.pytorch.org/whl/xpu), not on PyPI. The [tool.uv.sources]
# block below tells uv to fetch them from there. Vanilla pip does not parse
# [tool.uv.sources] / [[tool.uv.index]] and will look for the packages on
# PyPI instead, which won't work for the XPU variants.
[tool.uv.sources]
torch = [
  { index = "pytorch-xpu", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-xpu", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
pytorch-triton-xpu = [
  { index = "pytorch-xpu", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
explicit = true
