[project]
name = "genredrivenstorytelling"
version = "0.1.0"
description = "Create a story based on a chosen genre using vision-language models."
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
  "torch>=2.9.1",
  "torchvision>=0.24.1",
  "pytorch-triton-xpu>=3.5.0 ; sys_platform == 'win32' or sys_platform == 'linux'",
  "transformers>=5.0.0rc3",
  "jupyter>=1.1.1",
  "ipywidgets>=8.1.7",
  "qwen-vl-utils>=0.0.11",
  "matplotlib>=3.10.3",
]

# NOTE: Install with `uv sync`. The torch, torchvision, and
# pytorch-triton-xpu wheels for Intel XPU live on the PyTorch XPU index
# (https://download.pytorch.org/whl/xpu), not on PyPI. The [tool.uv.sources]
# block below tells uv to fetch them from there. Vanilla pip does not parse
# [tool.uv.sources] / [[tool.uv.index]] and will look for the packages on
# PyPI instead, which won't work for the XPU variants.
[tool.uv.sources]
torch = [
  { index = "pytorch-xpu", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-xpu", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
pytorch-triton-xpu = [
  { index = "pytorch-xpu", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
explicit = true
