[project]
name = "video-rag-ollama"
version = "0.1.0"
description = "Video RAG application using Ollama vision models for semantic video search"
readme = "README_Ollama.md"
requires-python = ">=3.12.0"
dependencies = [
    "ollama>=0.4.0",
    "streamlit>=1.30.0",
    "chromadb>=1.0.12",
    "sentence-transformers>=4.1.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "jupyter>=1.1.1",
    "ipykernel>=6.25.0",
    "ipywidgets>=8.1.0",
]
