[project]
name = "chat-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jupyterlab>=4.5.9",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "torchaudio>=2.9.1",
    "transformers>=5.5.0",
    "accelerate>=1.4.0",
    "datasets>=3.3.2",
    "librosa>=0.11.0",
    "soundfile>=0.13.1",
    "pytorch-triton-xpu>=3.2.0 ; sys_platform == 'linux'",
    "gtts>=2.5.4",
    "sounddevice>=0.5.2",
    "mistune>=3.3.0",
    "pillow>=12.3.0",
    "nbconvert>=7.17.0",
    "setuptools>=78.1.1",
    "jupyter-server>=2.20.0",
    "idna>=3.15",
    "aiohttp>=3.14.0",
    "filelock>=3.20.1",
    "pyarrow>=23.0.1",
    "pygments>=2.20.0",
    "soupsieve>=2.8.4",
    "msgpack>=1.2.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-xpu", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-xpu", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
torchaudio = [
  { index = "pytorch-xpu", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
pytorch-triton-xpu = [
  { index = "pytorch-xpu", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
explicit = true
